--- a/LobsterDraw/frmresizeunit.lfm
+++ b/LobsterDraw/frmresizeunit.lfm
@@ -1,12 +1,12 @@
 object FrmResize: TFrmResize
   Left = 678
-  Height = 320
+  Height = 287
   Top = 418
-  Width = 383
+  Width = 360
   BorderStyle = bsDialog
   Caption = 'Resize Canvas'
-  ClientHeight = 320
-  ClientWidth = 383
+  ClientHeight = 287
+  ClientWidth = 360
   FormStyle = fsStayOnTop
   OnCreate = FormCreate
   OnShow = FormShow
@@ -15,17 +15,17 @@ object FrmResize: TFrmResize
   LCLVersion = '1.0.14.0'
   object GrpResize: TGroupBox
     Left = 16
-    Height = 272
+    Height = 256
     Top = 16
-    Width = 240
+    Width = 224
     Caption = 'Resize'
-    ClientHeight = 250
-    ClientWidth = 236
+    ClientHeight = 234
+    ClientWidth = 220
     TabOrder = 0
     object EdtWidth: TSpinEdit
       Left = 94
       Height = 28
-      Top = 17
+      Top = 20
       Width = 74
       MaxValue = 4000
       MinValue = 1
@@ -36,7 +36,7 @@ object FrmResize: TFrmResize
     object EdtHeight: TSpinEdit
       Left = 94
       Height = 28
-      Top = 80
+      Top = 70
       Width = 74
       MaxValue = 4000
       MinValue = 1
@@ -47,7 +47,7 @@ object FrmResize: TFrmResize
     object LblWidth: TLabel
       Left = 22
       Height = 21
-      Top = 17
+      Top = 20
       Width = 41
       Caption = 'Width'
       ParentColor = False
@@ -55,7 +55,7 @@ object FrmResize: TFrmResize
     object LblHeight: TLabel
       Left = 22
       Height = 21
-      Top = 80
+      Top = 70
       Width = 46
       Caption = 'Height'
       ParentColor = False
@@ -63,15 +63,15 @@ object FrmResize: TFrmResize
     object LblAnchor: TLabel
       Left = 22
       Height = 21
-      Top = 132
+      Top = 120
       Width = 48
       Caption = 'Anchor'
       ParentColor = False
     end
     object PnlAnchors: TPanel
-      Left = 97
+      Left = 94
       Height = 96
-      Top = 131
+      Top = 120
       Width = 96
       ClientHeight = 96
       ClientWidth = 96
@@ -79,6 +79,7 @@ object FrmResize: TFrmResize
       object BtnUpperLeft: TSpeedButton
         Left = 0
         Height = 32
+        Hint = 'Top Left'
         Top = 0
         Width = 32
         Down = True
@@ -90,6 +91,7 @@ object FrmResize: TFrmResize
       object BtnUpperCenter: TSpeedButton
         Left = 32
         Height = 32
+        Hint = 'Top Center'
         Top = 0
         Width = 32
         GroupIndex = 1
@@ -100,6 +102,7 @@ object FrmResize: TFrmResize
       object BtnUpperRight: TSpeedButton
         Left = 64
         Height = 32
+        Hint = 'Top Right'
         Top = 0
         Width = 32
         GroupIndex = 1
@@ -110,6 +113,7 @@ object FrmResize: TFrmResize
       object BtnMiddleLeft: TSpeedButton
         Left = 0
         Height = 32
+        Hint = 'Middle Left'
         Top = 32
         Width = 32
         GroupIndex = 1
@@ -120,6 +124,7 @@ object FrmResize: TFrmResize
       object BtnMiddleCenter: TSpeedButton
         Left = 32
         Height = 32
+        Hint = 'Middle Center'
         Top = 32
         Width = 32
         GroupIndex = 1
@@ -130,6 +135,7 @@ object FrmResize: TFrmResize
       object BtnMiddleRight: TSpeedButton
         Left = 64
         Height = 32
+        Hint = 'Middle Right'
         Top = 32
         Width = 32
         GroupIndex = 1
@@ -140,6 +146,7 @@ object FrmResize: TFrmResize
       object BtnLowerLeft: TSpeedButton
         Left = 0
         Height = 32
+        Hint = 'Bottom Left'
         Top = 64
         Width = 32
         GroupIndex = 1
@@ -150,6 +157,7 @@ object FrmResize: TFrmResize
       object BtnLowerCenter: TSpeedButton
         Left = 32
         Height = 32
+        Hint = 'Bottom Center'
         Top = 64
         Width = 32
         GroupIndex = 1
@@ -160,6 +168,7 @@ object FrmResize: TFrmResize
       object BtnLowerRight: TSpeedButton
         Left = 64
         Height = 32
+        Hint = 'Bottom Right'
         Top = 64
         Width = 32
         GroupIndex = 1
@@ -170,7 +179,7 @@ object FrmResize: TFrmResize
     end
   end
   object BtnOkay: TButton
-    Left = 288
+    Left = 264
     Height = 41
     Top = 32
     Width = 78
@@ -180,7 +189,7 @@ object FrmResize: TFrmResize
     TabOrder = 1
   end
   object BtnCancel: TButton
-    Left = 288
+    Left = 264
     Height = 41
     Top = 88
     Width = 78
