Refactored DrawPad colors

--- a/LobsterDraw/frmmainunit.lfm
+++ b/LobsterDraw/frmmainunit.lfm
@@ -30,7 +30,10 @@ object FrmMain: TFrmMain
       Height = 606
       Top = 0
       Width = 821
-      ForeColor = clBlue
+      BackgroundColor1 = clGradientActiveCaption
+      BackgroundColor2 = clNone
+      FillColor = clBlack
+      LineColor = clBlack
       LineSize = 16
       ZoomPercent = 100
       CanvasWidth = 640
@@ -134,10 +137,10 @@ object FrmMain: TFrmMain
       OnKeyPress = EdtZoomKeyPress
       TabOrder = 0
     end
-    object BtnForeColor: TColorButton
+    object BtnLineColor: TColorButton
       Left = 378
       Height = 26
-      Hint = 'Fore Color'
+      Hint = 'Line Color'
       Top = 0
       Width = 73
       BorderWidth = 2
@@ -147,7 +150,7 @@ object FrmMain: TFrmMain
       Caption = 'Line'
       Flat = True
       Layout = blGlyphRight
-      OnColorChanged = BtnForeColorColorChanged
+      OnColorChanged = BtnLineColorColorChanged
     end
     object ToolButton13: TToolButton
       Left = 368
@@ -381,6 +384,42 @@ object FrmMain: TFrmMain
       Caption = 'Edit'
       object MnuResizeImage: TMenuItem
         Action = ActResizeImage
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00A4A4A4FFA4A4A4FFDFDFDF00A4A4A4FFA4A4A4FFDFDF
+          DF00A4A4A4FFA4A4A4FFDFDFDF00A4A4A4FFA4A4A4FFDFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4
+          A4FF5F5F5FFF5F5F5FFF5F5F5FFFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+          DF00A4A4A4FF5F5F5FFF5F5F5FFFDFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4
+          A4FF5F5F5FFFA4A4A4FF5F5F5FFFDFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FF5F5F
+          5FFFA4A4A4FFDFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00A4A4A4FF5F5F5FFFA4A4
+          A4FFDFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FFDFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00E6B0
+          89FEE2A880FFDD9F76FFD9966CFFD78C63FFD3855AFFD28358FFD48358D2DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00E7B4
+          8DFFEBC5A7FFE9BB9DFFE5B495FFE2AC8DFFE0A584FFDFA384FFD88E66F7DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00A4A4A4FFDFDFDF00DFDFDF00E7B4
+          8DFEEBC5A7FFE9BB9DFFE5B495FFE2AC8DFFE0A584FFDFA384FFD88E66D2DFDF
+          DF00A4A4A4FFA4A4A4FFDFDFDF00A4A4A4FFA4A4A4FFDFDFDF00DFDFDF00E6B3
+          8CFFECC7AAFFEBC0A1FFE7BA9BFFE5B192FFE2AA8BFFE0A687FFD88E66D2DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00E6B3
+          8CFFECC8ACFFEBC3A4FFEABEA0FFE7B798FFE4AF90FFE2AA8BFFD99169D2DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00E6B3
+          8CFFE6B38CFFE6B38CFFE5AF88FFE2A880FFDE9F76FFDA956CFFCE916FFFDFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDF
+          DF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00DFDFDF00
+        }
       end
       object MnuResizeCanvas: TMenuItem
         Action = ActResizeCanvas
