--- a/LobsterDraw/frmmainunit.lfm
+++ b/LobsterDraw/frmmainunit.lfm
@@ -7,10 +7,12 @@ object FrmMain: TFrmMain
   Caption = 'Lobster Draw'
   ClientHeight = 666
   ClientWidth = 825
+  KeyPreview = True
   Menu = MainMenu1
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
   OnDropFiles = FormDropFiles
+  OnKeyPress = FormKeyPress
   LCLVersion = '1.0.14.0'
   object ScrollBox1: TScrollBox
     Left = 0
@@ -24,13 +26,15 @@ object FrmMain: TFrmMain
     Align = alClient
     ClientHeight = 606
     ClientWidth = 821
+    Color = clAppWorkspace
+    ParentColor = False
     TabOrder = 0
     object LCDrawPad1: TLCDrawPad
       Left = 0
       Height = 606
       Top = 0
       Width = 821
-      BackgroundColor1 = clGradientActiveCaption
+      BackgroundColor1 = clAppWorkspace
       BackgroundColor2 = clNone
       FillColor = clBlack
       LineColor = clBlack
@@ -1226,7 +1230,7 @@ object FrmMain: TFrmMain
   end
   object SavePictureDialog1: TSavePictureDialog
     Filter = 'Graphic (*.bmp,*.gif,*.jpg;*.jpeg;*.jpe;*.jfif,*.png,*.pbm;*.pgm;*.ppm,*.tif;*.tiff)|*.bmp;*.gif;*.jpg;*.jpeg;*.jpe;*.jfif;*.png;*.pbm;*.pgm;*.ppm;*.tif;*.tiff|Bitmaps (*.bmp)|*.bmp|Graphics Interchange Format (*.gif)|*.gif|Joint Picture Expert Group (*.jpg;*.jpeg;*.jpe;*.jfif)|*.jpg;*.jpeg;*.jpe;*.jfif|Portable Network Graphics (*.png)|*.png|Portable PixMap (*.pbm;*.pgm;*.ppm)|*.pbm;*.pgm;*.ppm|Tagged Image File Format (*.tif;*.tiff)|*.tif;*.tiff|All files (*.*)|*.*|'
-    FilterIndex = 6
+    FilterIndex = 5
     left = 192
     top = 152
   end
