--- a/LobsterDraw/frmresizeunit.lfm
+++ b/LobsterDraw/frmresizeunit.lfm
@@ -1,11 +1,11 @@
 object FrmResize: TFrmResize
-  Left = 678
-  Height = 280
-  Top = 418
+  Left = 1008
+  Height = 351
+  Top = 620
   Width = 335
   BorderStyle = bsDialog
   Caption = 'Resize Canvas'
-  ClientHeight = 280
+  ClientHeight = 351
   ClientWidth = 335
   FormStyle = fsStayOnTop
   OnCreate = FormCreate
@@ -15,35 +15,13 @@ object FrmResize: TFrmResize
   LCLVersion = '1.0.14.0'
   object GrpResize: TGroupBox
     Left = 16
-    Height = 248
+    Height = 320
     Top = 16
     Width = 216
     Caption = 'Resize'
-    ClientHeight = 226
+    ClientHeight = 298
     ClientWidth = 212
     TabOrder = 0
-    object EdtWidth: TSpinEdit
-      Left = 76
-      Height = 28
-      Top = 20
-      Width = 72
-      MaxValue = 4000
-      MinValue = 1
-      OnChange = EdtDimensionsChange
-      TabOrder = 0
-      Value = 640
-    end
-    object EdtHeight: TSpinEdit
-      Left = 76
-      Height = 28
-      Top = 65
-      Width = 72
-      MaxValue = 4000
-      MinValue = 1
-      OnChange = EdtDimensionsChange
-      TabOrder = 1
-      Value = 480
-    end
     object LblWidth: TLabel
       Left = 18
       Height = 21
@@ -63,7 +41,7 @@ object FrmResize: TFrmResize
     object LblAnchor: TLabel
       Left = 18
       Height = 21
-      Top = 110
+      Top = 186
       Width = 48
       Caption = 'Anchor'
       ParentColor = False
@@ -71,11 +49,11 @@ object FrmResize: TFrmResize
     object PnlAnchors: TPanel
       Left = 76
       Height = 96
-      Top = 110
+      Top = 186
       Width = 96
       ClientHeight = 96
       ClientWidth = 96
-      TabOrder = 2
+      TabOrder = 5
       object BtnUpperLeft: TSpeedButton
         Left = 0
         Height = 32
@@ -192,6 +170,63 @@ object FrmResize: TFrmResize
       Width = 39
       Caption = 'pixels'
       ParentColor = False
+    end
+    object CbConstrain: TCheckBox
+      Left = 18
+      Height = 24
+      Top = 148
+      Width = 164
+      Caption = 'Maintain aspect ratio'
+      Checked = True
+      OnChange = CbConstrainChange
+      State = cbChecked
+      TabOrder = 4
+    end
+    object RbPixels: TRadioButton
+      Left = 20
+      Height = 24
+      Top = 110
+      Width = 61
+      Caption = 'Pixels'
+      Checked = True
+      OnChange = RbPixelsChange
+      TabOrder = 2
+      TabStop = True
+    end
+    object RbPercent: TRadioButton
+      Left = 102
+      Height = 24
+      Top = 110
+      Width = 73
+      Caption = 'Percent'
+      OnChange = RbPercentChange
+      TabOrder = 3
+    end
+    object EdtWidth: TFloatSpinEdit
+      Left = 76
+      Height = 28
+      Top = 20
+      Width = 72
+      DecimalPlaces = 0
+      Increment = 1
+      MaxValue = 4000
+      MinValue = 1
+      OnChange = EdtWidthChange
+      TabOrder = 0
+      Value = 640
+    end
+    object EdtHeight: TFloatSpinEdit
+      Left = 76
+      Height = 28
+      Top = 65
+      Width = 72
+      DecimalPlaces = 0
+      Increment = 1
+      MaxValue = 4000
+      MinValue = 1
+      OnChange = EdtHeightChange
+      TabOrder = 1
+      Value = 480
     end
   end
   object BtnOkay: TButton
